--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main layout</title>
 </head>
 <body>
-    
+    <h1>¡Welcome!</h1>
+    {{{body}}}
 </body>
 </html>
