--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -4,13 +4,20 @@
 
 <h3>Add product:</h3>
 
-<form id="form">
+<form id="formAdd">
     Title:<input type="text" name="prodTitle" id="prodTitle">
     Description:<input type="text" name="prodDesc" id="prodDesc">
     Price:<input type="text" name="prodPrice" id="prodPrice">
     Thumbnails:<input type="text" name="prodThumb" id="prodThumb">
     Code:<input type="text" name="prodCode" id="prodCode">
     Stock:<input type="text" name="prodStock" id="prodStock">
+    <input type="submit" value="Send" id="input">
+</form>
+
+<h3>Delete product</h3>
+
+<form id="formDelete">
+    Id: <input type="text" name="prodId" id="prodId">
     <input type="submit" value="Send" id="input">
 </form>
 
