--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -7,7 +7,7 @@
     <p>stock: {{stock}}</p>
     <p>thumbnails: {{thumbnails}}</p>
     <p>id: <p id="pid">{{id}}</p></p>
-    <button type="submit" id="btnToCart">Agregar al carrito</button>
+    <button type="submit" id="btnToCart">Add to cart</button>
 </form>
 {{/each}}
 
