--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,10 +1,10 @@
-{{#each cart.products}}
+{{#each products}}
 <div>
     <h3> {{title}}</h3>
     <p>description: {{description}}</p>
     <p>price: {{price}}</p>
-    <p>code: {{code}}</p>
     <p>stock: {{stock}}</p>
+    <p>code: {{code}}</p>
     <p>thumbnails: {{thumbnails}}</p>
 </div>
 {{/each}}
